Corrected error in Database_Url caught at compile time by sqlx

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL = mysql://admin:0000@localhost/Library
+DATABASE_URL = mysql://admin:0000@localhost/Edl
 SERVER_ADDRESS = 127.0.0.1
 SERVER_PORT = 8000
 KEY = secret
